fucking bug fixed